--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,16 +4,16 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+EditorStartupMap=/Game/Maps/Train.Train
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+GameDefaultMap=/Game/Maps/Train.Train
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
@@ -88,4 +88,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonPlayerController",NewClassName="AberrationPlayerController")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="AberrationGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="AberrationCharacter")
+
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/Aberration.Vestibule.OnOverlapBegin",NewName="/Script/Aberration.Vestibule.OnBeginOverlap")
 
