aberration base, fog

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,4 +92,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/Aberration.Vestibule.OnOverlapBegin",NewName="/Script/Aberration.Vestibule.OnBeginOverlap")
++ClassRedirects=(OldName="/Script/Aberration.Anomaly",NewName="/Script/Aberration.AberrationBase")
 
