notify aberrations, stop using static delegates

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,4 +93,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/Aberration.Vestibule.OnOverlapBegin",NewName="/Script/Aberration.Vestibule.OnBeginOverlap")
 +ClassRedirects=(OldName="/Script/Aberration.Anomaly",NewName="/Script/Aberration.AberrationBase")
++ClassRedirects=(OldName="/Script/Aberration.AnomalyManager",NewName="/Script/Aberration.AberrationManager")
++EnumRedirects=(OldName="/Script/Aberration.EAberrationTypes",NewName="/Script/Aberration.EAberrationDifficulty")
++EnumRedirects=(OldName="/Script/Aberration.EAberrationType",NewName="/Script/Aberration.EAberrationDifficulty")
++StructRedirects=(OldName="/Script/Aberration.ActiveArrays",NewName="/Script/Aberration.ActiveAberrations")
 
