material aberration, random aberration

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,4 +97,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +EnumRedirects=(OldName="/Script/Aberration.EAberrationTypes",NewName="/Script/Aberration.EAberrationDifficulty")
 +EnumRedirects=(OldName="/Script/Aberration.EAberrationType",NewName="/Script/Aberration.EAberrationDifficulty")
 +StructRedirects=(OldName="/Script/Aberration.ActiveArrays",NewName="/Script/Aberration.ActiveAberrations")
++ClassRedirects=(OldName="/Script/Aberration.AberrationColor",NewName="/Script/Aberration.AberrationMaterial")
 
