open / close doors

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -98,4 +98,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +EnumRedirects=(OldName="/Script/Aberration.EAberrationType",NewName="/Script/Aberration.EAberrationDifficulty")
 +StructRedirects=(OldName="/Script/Aberration.ActiveArrays",NewName="/Script/Aberration.ActiveAberrations")
 +ClassRedirects=(OldName="/Script/Aberration.AberrationColor",NewName="/Script/Aberration.AberrationMaterial")
++PropertyRedirects=(OldName="/Script/Aberration.TrainDoor.OpenDoorXOffset",NewName="/Script/Aberration.TrainDoor.OpenDoorYOffset")
++PropertyRedirects=(OldName="/Script/Aberration.TrainDoor.BoxCollision",NewName="/Script/Aberration.TrainDoor.ForceCloseTrigger")
++PropertyRedirects=(OldName="/Script/Aberration.TrainDoor.BoxTrigger",NewName="/Script/Aberration.TrainDoor.ForceCloseTrigger")
 
