terminal widget and 3d models

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -88,7 +88,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonPlayerController",NewClassName="AberrationPlayerController")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="AberrationGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="AberrationCharacter")
-
+PreviewShadowsIndicatorMaterialName=None
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/Aberration.Vestibule.OnOverlapBegin",NewName="/Script/Aberration.Vestibule.OnBeginOverlap")
