terminal focus camera

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -101,4 +101,7 @@ PreviewShadowsIndicatorMaterialName=None
 +PropertyRedirects=(OldName="/Script/Aberration.TrainDoor.OpenDoorXOffset",NewName="/Script/Aberration.TrainDoor.OpenDoorYOffset")
 +PropertyRedirects=(OldName="/Script/Aberration.TrainDoor.BoxCollision",NewName="/Script/Aberration.TrainDoor.ForceCloseTrigger")
 +PropertyRedirects=(OldName="/Script/Aberration.TrainDoor.BoxTrigger",NewName="/Script/Aberration.TrainDoor.ForceCloseTrigger")
++ClassRedirects=(OldName="/Script/Aberration.CharacterInteractionComponent",NewName="/Script/Aberration.InteractionComponent")
++PropertyRedirects=(OldName="/Script/Aberration.Terminal.Camera",NewName="/Script/Aberration.Terminal.FocusActor")
++PropertyRedirects=(OldName="/Script/Aberration.Terminal.Camera",NewName="/Script/Aberration.Terminal.FocusActor")
 
