btn selection, success screen

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -104,4 +104,5 @@ PreviewShadowsIndicatorMaterialName=None
 +ClassRedirects=(OldName="/Script/Aberration.CharacterInteractionComponent",NewName="/Script/Aberration.InteractionComponent")
 +PropertyRedirects=(OldName="/Script/Aberration.Terminal.Camera",NewName="/Script/Aberration.Terminal.FocusActor")
 +PropertyRedirects=(OldName="/Script/Aberration.Terminal.Camera",NewName="/Script/Aberration.Terminal.FocusActor")
++FunctionRedirects=(OldName="/Script/Aberration.TerminalWidget.OnClickConfirm",NewName="/Script/Aberration.TerminalWidget.HideReport")
 
