terminal and interaction widget, doors open

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -105,4 +105,8 @@ PreviewShadowsIndicatorMaterialName=None
 +PropertyRedirects=(OldName="/Script/Aberration.Terminal.Camera",NewName="/Script/Aberration.Terminal.FocusActor")
 +PropertyRedirects=(OldName="/Script/Aberration.Terminal.Camera",NewName="/Script/Aberration.Terminal.FocusActor")
 +FunctionRedirects=(OldName="/Script/Aberration.TerminalWidget.OnClickConfirm",NewName="/Script/Aberration.TerminalWidget.HideReport")
++PropertyRedirects=(OldName="/Script/Aberration.Terminal.ScreenWidget",NewName="/Script/Aberration.Terminal.ScreenWidgetComponent")
++PropertyRedirects=(OldName="/Script/Aberration.Terminal.TerminalWidget",NewName="/Script/Aberration.Terminal.ScreenWidget")
++FunctionRedirects=(OldName="/Script/Aberration.Terminal.ReleaseAccess",NewName="/Script/Aberration.Terminal.UpdateReport")
++FunctionRedirects=(OldName="/Script/Aberration.TerminalWidget.HideReport",NewName="/Script/Aberration.TerminalWidget.ConfirmReport")
 
