--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -109,4 +109,6 @@ PreviewShadowsIndicatorMaterialName=None
 +PropertyRedirects=(OldName="/Script/Aberration.Terminal.TerminalWidget",NewName="/Script/Aberration.Terminal.ScreenWidget")
 +FunctionRedirects=(OldName="/Script/Aberration.Terminal.ReleaseAccess",NewName="/Script/Aberration.Terminal.UpdateReport")
 +FunctionRedirects=(OldName="/Script/Aberration.TerminalWidget.HideReport",NewName="/Script/Aberration.TerminalWidget.ConfirmReport")
++StructRedirects=(OldName="/Script/Aberration.PossibleAnswerData",NewName="/Script/Aberration.AnswerData")
++PropertyRedirects=(OldName="/Script/Aberration.TrainDoor.OpenSpeed",NewName="/Script/Aberration.TrainDoor.Speed")
 
