report score and minor bug fixes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -111,4 +111,5 @@ PreviewShadowsIndicatorMaterialName=None
 +FunctionRedirects=(OldName="/Script/Aberration.TerminalWidget.HideReport",NewName="/Script/Aberration.TerminalWidget.ConfirmReport")
 +StructRedirects=(OldName="/Script/Aberration.PossibleAnswerData",NewName="/Script/Aberration.AnswerData")
 +PropertyRedirects=(OldName="/Script/Aberration.TrainDoor.OpenSpeed",NewName="/Script/Aberration.TrainDoor.Speed")
++PropertyRedirects=(OldName="/Script/Aberration.AberrationGameMode.OverrideSeed",NewName="/Script/Aberration.AberrationGameMode.Seed")
 
