floating, mesh, movement, visibility aberrations

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -112,4 +112,5 @@ PreviewShadowsIndicatorMaterialName=None
 +StructRedirects=(OldName="/Script/Aberration.PossibleAnswerData",NewName="/Script/Aberration.AnswerData")
 +PropertyRedirects=(OldName="/Script/Aberration.TrainDoor.OpenSpeed",NewName="/Script/Aberration.TrainDoor.Speed")
 +PropertyRedirects=(OldName="/Script/Aberration.AberrationGameMode.OverrideSeed",NewName="/Script/Aberration.AberrationGameMode.Seed")
++PropertyRedirects=(OldName="/Script/Aberration.AberrationMovement.EndXPosition",NewName="/Script/Aberration.AberrationMovement.FinalXPosition")
 
