finish menu and save

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -114,6 +114,7 @@ PreviewShadowsIndicatorMaterialName=None
 +PropertyRedirects=(OldName="/Script/Aberration.AberrationGameMode.OverrideSeed",NewName="/Script/Aberration.AberrationGameMode.Seed")
 +PropertyRedirects=(OldName="/Script/Aberration.AberrationMovement.EndXPosition",NewName="/Script/Aberration.AberrationMovement.FinalXPosition")
 +PropertyRedirects=(OldName="/Script/Aberration.Terminal.LastAberrationsNames",NewName="/Script/Aberration.Terminal.PreviousAberrationsNames")
++PropertyRedirects=(OldName="/Script/Aberration.AberrationSaveGame.AberrationsSeen",NewName="/Script/Aberration.AberrationSaveGame.SeenAberrations")
 
 [/Script/Engine.AudioSettings]
 DefaultSoundClassName=/Game/Audio/Master.Master
