--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,6 +4,7 @@ ProjectName=First Person Template
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=3403FE544A595667C5F6E49CDD4441EA
+CopyrightNotice=Copyright (c) 2024, Jasbrela. All rights reserved.
 
 [StartupActions]
 bAddPacks=True
