--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -115,6 +115,7 @@ PreviewShadowsIndicatorMaterialName=None
 +PropertyRedirects=(OldName="/Script/Aberration.AberrationMovement.EndXPosition",NewName="/Script/Aberration.AberrationMovement.FinalXPosition")
 +PropertyRedirects=(OldName="/Script/Aberration.Terminal.LastAberrationsNames",NewName="/Script/Aberration.Terminal.PreviousAberrationsNames")
 +PropertyRedirects=(OldName="/Script/Aberration.AberrationSaveGame.AberrationsSeen",NewName="/Script/Aberration.AberrationSaveGame.SeenAberrations")
++PropertyRedirects=(OldName="/Script/Aberration.QuestionnaireWidget.ThisComponent",NewName="/Script/Aberration.QuestionnaireWidget.Widget")
 
 [/Script/Engine.AudioSettings]
 DefaultSoundClassName=/Game/Audio/Master.Master
