--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -116,6 +116,7 @@ PreviewShadowsIndicatorMaterialName=None
 +PropertyRedirects=(OldName="/Script/Aberration.Terminal.LastAberrationsNames",NewName="/Script/Aberration.Terminal.PreviousAberrationsNames")
 +PropertyRedirects=(OldName="/Script/Aberration.AberrationSaveGame.AberrationsSeen",NewName="/Script/Aberration.AberrationSaveGame.SeenAberrations")
 +PropertyRedirects=(OldName="/Script/Aberration.QuestionnaireWidget.ThisComponent",NewName="/Script/Aberration.QuestionnaireWidget.Widget")
++PropertyRedirects=(OldName="/Script/Aberration.TerminalWidget.MouseClickAudioComponent",NewName="/Script/Aberration.TerminalWidget.AudioComponent")
 
 [/Script/Engine.AudioSettings]
 DefaultSoundClassName=/Game/Audio/Master.Master
