wip (broken): terminal widget ui

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -121,6 +121,7 @@ GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
 +PropertyRedirects=(OldName="/Script/Aberration.QuestionnaireWidget.ThisComponent",NewName="/Script/Aberration.QuestionnaireWidget.Widget")
 +PropertyRedirects=(OldName="/Script/Aberration.TerminalWidget.MouseClickAudioComponent",NewName="/Script/Aberration.TerminalWidget.AudioComponent")
 +PropertyRedirects=(OldName="/Script/Aberration.TerminalWidget.NotesWindow",NewName="/Script/Aberration.TerminalWidget.Notes")
++PropertyRedirects=(OldName="/Script/Aberration.TerminalViewModel.SeedText",NewName="/Script/Aberration.TerminalViewModel.Seed")
 
 [/Script/Engine.AudioSettings]
 DefaultSoundClassName=/Game/Audio/Master.Master
@@ -130,7 +131,7 @@ DefaultBaseSoundMix=/Game/Audio/MasterSoundMix.MasterSoundMix
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
-SoftwareCursors=((Default, "/Game/Blueprints/UI/BP_Cursor.BP_Cursor_C"))
+SoftwareCursors=()
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
@@ -142,4 +143,5 @@ bAuthorizeAutomaticWidgetVariableCreation=True
 CustomFontDPI=96
 FontDPIPreset=Unreal
 bUseCustomFontDPI=False
+bEnableDistanceFieldFontRasterization=False
 
