disable some rendering stuff
following this tutorial: https://youtu.be/Zdzxzp_B4X8

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,6 +32,17 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.MotionBlur=False
 r.LegacyLuminanceFactors=False
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
+r.DefaultFeature.AutoExposure=True
+
+r.TemporalAA.Upsampling=False
+r.AntiAliasingMethod=0
+r.MSAACount=0
+r.ScreenPercentage=70
+r.Upscale.Quality=0
+r.DefaultFeature.AutoExposure.Bias=0.200000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -92,6 +103,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="AberrationCharacter")
 PreviewShadowsIndicatorMaterialName=None
 GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
+bUseFixedFrameRate=False
+FixedFrameRate=60.000000
+bSmoothFrameRate=False
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/Aberration.Vestibule.OnOverlapBegin",NewName="/Script/Aberration.Vestibule.OnBeginOverlap")
