--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -40,6 +40,7 @@ r.DefaultFeature.AutoExposure=True
 r.TemporalAA.Upsampling=False
 r.AntiAliasingMethod=0
 r.MSAACount=0
+r.ScreenPercentage.MaxResolution=360
 r.ScreenPercentage=70
 r.Upscale.Quality=0
 r.DefaultFeature.AutoExposure.Bias=0.200000
