implement middle trigger

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -137,6 +137,7 @@ bSmoothFrameRate=False
 +PropertyRedirects=(OldName="/Script/Aberration.TerminalWidget.NotesWindow",NewName="/Script/Aberration.TerminalWidget.Notes")
 +PropertyRedirects=(OldName="/Script/Aberration.TerminalViewModel.SeedText",NewName="/Script/Aberration.TerminalViewModel.Seed")
 +PropertyRedirects=(OldName="/Script/Aberration.AberrationMaterials.Mesh",NewName="/Script/Aberration.AberrationMaterials.MeshComponent")
++ClassRedirects=(OldName="/Script/Aberration.AAberrationMiddleTrigger",NewName="/Script/Aberration.AberrationMiddleTrigger")
 
 [/Script/Engine.AudioSettings]
 DefaultSoundClassName=/Game/Audio/Master.Master
