fix pt-br localisation

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,7 +11,7 @@ bAddPacks=False
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
 FullRebuild=False
 ForDistribution=False
@@ -31,6 +31,7 @@ MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
 WriteBackMetadataToAssetRegistry=Disabled
+bWritePluginSizeSummaryJsons=False
 bCompressed=True
 PackageCompressionFormat=Oodle
 bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
@@ -51,16 +52,20 @@ bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=False
-InternationalizationPreset=English
+InternationalizationPreset=All
 -CulturesToStage=en
 +CulturesToStage=en
++CulturesToStage=pt
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=False
+bTreatWarningsAsErrorsOnCook=False
 bSkipEditorContent=False
 bSkipMovies=False
 -IniKeyDenylist=KeyStorePassword
 -IniKeyDenylist=KeyPassword
+-IniKeyDenylist=DebugKeyStorePassword
+-IniKeyDenylist=DebugKeyPassword
 -IniKeyDenylist=rsa.privateexp
 -IniKeyDenylist=rsa.modulus
 -IniKeyDenylist=rsa.publicexp
@@ -76,6 +81,8 @@ bSkipMovies=False
 -IniKeyDenylist=MobileProvision
 -IniKeyDenylist=IniKeyDenylist
 -IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=DebugKeyStorePassword
++IniKeyDenylist=DebugKeyPassword
 +IniKeyDenylist=KeyStorePassword
 +IniKeyDenylist=KeyPassword
 +IniKeyDenylist=rsa.privateexp
@@ -95,9 +102,14 @@ bSkipMovies=False
 +IniKeyDenylist=IniSectionDenylist
 -IniSectionDenylist=HordeStorageServers
 -IniSectionDenylist=StorageServers
+-IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
++IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
++DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 +DirectoriesToAlwaysStageAsNonUFS=(Path="Splash")
+bRetainStagedDirectory=False
+CustomStageCopyHandler=
 
 [/Script/MoviePlayer.MoviePlayerSettings]
 bWaitForMoviesToComplete=True
