delete unused assets

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,6 +5,10 @@ ProjectName=First Person Template
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=3403FE544A595667C5F6E49CDD4441EA
 CopyrightNotice=Copyright (c) 2024, Jasbrela. All rights reserved.
+ProjectName=Aberration Express
+ProjectVersion=30
+CompanyName=Jasbrela
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "5666AB184F92E5D52C16BF8D28AC4955", "Aberration Express")
 
 [StartupActions]
 bAddPacks=False
