adjust some options + vsync on by default

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,9 +17,9 @@ GlobalDefaultGameMode=/Game/Blueprints/Game/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
-r.ReflectionMethod=1
-r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.ReflectionMethod=0
+r.GenerateMeshDistanceFields=False
+r.DynamicGlobalIlluminationMethod=0
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
@@ -43,6 +43,8 @@ r.MSAACount=0
 r.ScreenPercentage=100
 r.Upscale.Quality=0
 r.DefaultFeature.AutoExposure.Bias=0.200000
+r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=False
+r.Nanite.ProjectEnabled=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -143,6 +145,9 @@ bSmoothFrameRate=False
 DefaultSoundClassName=/Game/Audio/Master.Master
 DefaultMediaSoundClassName=/Game/Audio/Master.Master
 DefaultBaseSoundMix=/Game/Audio/MasterSoundMix.MasterSoundMix
+
+[SystemSettings]
+r.RayTracing=0
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
